// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@nrwl/storybook:configuration basic functionalities should generate a webpackFinal into the main.js and reference a potential global webpackFinal definition 1`] = `
"module.exports = {
  core: { builder: 'webpack5' },
  stories: ['../**/*.stories.mdx', '../**/*.stories.@(js|jsx|ts|tsx)'],
  addons: ['@storybook/addon-essentials'],
};

// To customize your webpack configuration you can use the webpackFinal field.
// Check https://storybook.js.org/docs/react/builders/webpack#extending-storybooks-webpack-config
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nrwl/storybook:configuration basic functionalities should generate files 1`] = `
Object {
  "affected": Object {
    "defaultBase": "main",
  },
  "namedInputs": Object {
    "production": Array [
      "default",
      "!{projectRoot}/.eslintrc.json",
      "!{projectRoot}/**/?(*.)+(spec|test).[jt]s?(x)?(.snap)",
      "!{projectRoot}/tsconfig.spec.json",
      "!{projectRoot}/jest.config.[jt]s",
      "!{projectRoot}/**/*.stories.@(js|jsx|ts|tsx|mdx)",
      "!{projectRoot}/.storybook/**/*",
    ],
  },
  "npmScope": "proj",
  "targetDefaults": Object {
    "build-storybook": Object {
      "inputs": Array [
        "default",
        "^production",
        "!{projectRoot}/.storybook/**/*",
      ],
    },
    "e2e": Object {
      "inputs": Array [
        "default",
        "^production",
      ],
    },
    "lint": Object {
      "inputs": Array [
        "default",
        "{workspaceRoot}/.eslintrc.json",
        "{workspaceRoot}/.eslintignore",
      ],
    },
    "test": Object {
      "inputs": Array [
        "default",
        "^production",
        "{workspaceRoot}/jest.preset.js",
      ],
    },
  },
  "tasksRunnerOptions": Object {
    "default": Object {
      "options": Object {
        "cacheableOperations": Array [
          "build",
          "lint",
          "test",
          "e2e",
          "build-storybook",
        ],
      },
      "runner": "nx/tasks-runners/default",
    },
  },
}
`;

exports[`@nrwl/storybook:configuration basic functionalities should have the proper typings 1`] = `
Array [
  "../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts",
  "../../../node_modules/@nrwl/react/typings/cssmodule.d.ts",
  "../../../node_modules/@nrwl/react/typings/image.d.ts",
]
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for Storybook configurations with Vite should create correct main.js and tsconfig.json for NextJS buildable libs 1`] = `
"const { mergeConfig } = require('vite');
const viteTsConfigPaths = require('vite-tsconfig-paths').default;

module.exports = {
  core: { builder: '@storybook/builder-vite' },
  stories: [
    '../src/lib/**/*.stories.mdx',
    '../src/lib/**/*.stories.@(js|jsx|ts|tsx)',
  ],
  addons: ['@storybook/addon-essentials'],
  async viteFinal(config, { configType }) {
    return mergeConfig(config, {
      plugins: [
        viteTsConfigPaths({
          root: '../../../',
        }),
      ],
    });
  },
};

// To customize your Vite configuration you can use the viteFinal field.
// Check https://storybook.js.org/docs/react/builders/vite#configuration
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for Storybook configurations with Vite should create correct main.js and tsconfig.json for NextJS buildable libs 2`] = `
"{
  \\"extends\\": \\"../tsconfig.json\\",
  \\"compilerOptions\\": {
    \\"emitDecoratorMetadata\\": true,
    \\"outDir\\": \\"\\"
  },
  \\"files\\": [
    \\"../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/cssmodule.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/image.d.ts\\"
  ],
  \\"exclude\\": [
    \\"../**/*.spec.ts\\",
    \\"../**/*.spec.js\\",
    \\"../**/*.spec.tsx\\",
    \\"../**/*.spec.jsx\\"
  ],
  \\"include\\": [
    \\"../src/**/*.stories.ts\\",
    \\"../src/**/*.stories.js\\",
    \\"../src/**/*.stories.jsx\\",
    \\"../src/**/*.stories.tsx\\",
    \\"../src/**/*.stories.mdx\\",
    \\"*.js\\"
  ]
}
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for Storybook configurations with Vite should create correct main.js and tsconfig.json for React apps using the swc compiler 1`] = `
"const { mergeConfig } = require('vite');
const viteTsConfigPaths = require('vite-tsconfig-paths').default;

module.exports = {
  core: { builder: '@storybook/builder-vite' },
  stories: [
    '../src/app/**/*.stories.mdx',
    '../src/app/**/*.stories.@(js|jsx|ts|tsx)',
  ],
  addons: ['@storybook/addon-essentials', 'storybook-addon-swc'],
  async viteFinal(config, { configType }) {
    return mergeConfig(config, {
      plugins: [
        viteTsConfigPaths({
          root: '../../../',
        }),
      ],
    });
  },
};

// To customize your Vite configuration you can use the viteFinal field.
// Check https://storybook.js.org/docs/react/builders/vite#configuration
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for Storybook configurations with Vite should create correct main.js and tsconfig.json for React apps using the swc compiler 2`] = `
"{
  \\"extends\\": \\"../tsconfig.json\\",
  \\"compilerOptions\\": {
    \\"emitDecoratorMetadata\\": true,
    \\"outDir\\": \\"\\"
  },
  \\"files\\": [
    \\"../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/cssmodule.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/image.d.ts\\"
  ],
  \\"exclude\\": [
    \\"../**/*.spec.ts\\",
    \\"../**/*.spec.js\\",
    \\"../**/*.spec.tsx\\",
    \\"../**/*.spec.jsx\\"
  ],
  \\"include\\": [
    \\"../src/**/*.stories.ts\\",
    \\"../src/**/*.stories.js\\",
    \\"../src/**/*.stories.jsx\\",
    \\"../src/**/*.stories.tsx\\",
    \\"../src/**/*.stories.mdx\\",
    \\"*.js\\"
  ]
}
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for Storybook configurations with Vite should create correct main.js and tsconfig.json for React buildable libs 1`] = `
"const { mergeConfig } = require('vite');
const viteTsConfigPaths = require('vite-tsconfig-paths').default;

module.exports = {
  core: { builder: '@storybook/builder-vite' },
  stories: [
    '../src/lib/**/*.stories.mdx',
    '../src/lib/**/*.stories.@(js|jsx|ts|tsx)',
  ],
  addons: ['@storybook/addon-essentials'],
  async viteFinal(config, { configType }) {
    return mergeConfig(config, {
      plugins: [
        viteTsConfigPaths({
          root: '../../../',
        }),
      ],
    });
  },
};

// To customize your Vite configuration you can use the viteFinal field.
// Check https://storybook.js.org/docs/react/builders/vite#configuration
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for Storybook configurations with Vite should create correct main.js and tsconfig.json for React buildable libs 2`] = `
"{
  \\"extends\\": \\"../tsconfig.json\\",
  \\"compilerOptions\\": {
    \\"emitDecoratorMetadata\\": true,
    \\"outDir\\": \\"\\"
  },
  \\"files\\": [
    \\"../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/cssmodule.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/image.d.ts\\"
  ],
  \\"exclude\\": [
    \\"../**/*.spec.ts\\",
    \\"../**/*.spec.js\\",
    \\"../**/*.spec.tsx\\",
    \\"../**/*.spec.jsx\\"
  ],
  \\"include\\": [
    \\"../src/**/*.stories.ts\\",
    \\"../src/**/*.stories.js\\",
    \\"../src/**/*.stories.jsx\\",
    \\"../src/**/*.stories.tsx\\",
    \\"../src/**/*.stories.mdx\\",
    \\"*.js\\"
  ]
}
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for Storybook configurations with Vite should create correct main.ts and tsconfig.json for NextJS libs 1`] = `
"import type { StorybookConfig } from '@storybook/core-common';

import { mergeConfig } from 'vite';
import viteTsConfigPaths from 'vite-tsconfig-paths';

const config: StorybookConfig = {
  core: { builder: '@storybook/builder-vite' },
  stories: [
    '../src/lib/**/*.stories.mdx',
    '../src/lib/**/*.stories.@(js|jsx|ts|tsx)',
  ],
  addons: ['@storybook/addon-essentials'],
  async viteFinal(config: any) {
    return mergeConfig(config, {
      plugins: [
        viteTsConfigPaths({
          root: '../../../',
        }),
      ],
    });
  },
} as StorybookConfig;

module.exports = config;

// To customize your Vite configuration you can use the viteFinal field.
// Check https://storybook.js.org/docs/react/builders/vite#configuration
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for Storybook configurations with Vite should create correct main.ts and tsconfig.json for NextJS libs 2`] = `
"{
  \\"extends\\": \\"../tsconfig.json\\",
  \\"compilerOptions\\": {
    \\"emitDecoratorMetadata\\": true,
    \\"outDir\\": \\"\\"
  },
  \\"files\\": [
    \\"../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/cssmodule.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/image.d.ts\\"
  ],
  \\"exclude\\": [
    \\"../**/*.spec.ts\\",
    \\"../**/*.spec.js\\",
    \\"../**/*.spec.tsx\\",
    \\"../**/*.spec.jsx\\"
  ],
  \\"include\\": [
    \\"../src/**/*.stories.ts\\",
    \\"../src/**/*.stories.js\\",
    \\"../src/**/*.stories.jsx\\",
    \\"../src/**/*.stories.tsx\\",
    \\"../src/**/*.stories.mdx\\",
    \\"*.ts\\",
    \\"*.js\\"
  ]
}
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for Storybook configurations with Vite should create correct main.ts and tsconfig.json for NextJs apps 1`] = `
"import type { StorybookConfig } from '@storybook/core-common';
import path from 'path';
import { mergeConfig } from 'vite';
import viteTsConfigPaths from 'vite-tsconfig-paths';

const config: StorybookConfig = {
  core: { builder: '@storybook/builder-vite' },
  stories: [
    '../components/**/*.stories.mdx',
    '../components/**/*.stories.@(js|jsx|ts|tsx)',
  ],
  addons: [
    '@storybook/addon-essentials',

    'storybook-addon-swc',
    {
      name: 'storybook-addon-next',
      options: {
        nextConfigPath: path.resolve(__dirname, '../next.config.js'),
      },
    },
  ],
  async viteFinal(config: any) {
    return mergeConfig(config, {
      plugins: [
        viteTsConfigPaths({
          root: '../../../',
        }),
      ],
    });
  },
} as StorybookConfig;

module.exports = config;

// To customize your Vite configuration you can use the viteFinal field.
// Check https://storybook.js.org/docs/react/builders/vite#configuration
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for Storybook configurations with Vite should create correct main.ts and tsconfig.json for NextJs apps 2`] = `
"{
  \\"extends\\": \\"../tsconfig.json\\",
  \\"compilerOptions\\": {
    \\"emitDecoratorMetadata\\": true,
    \\"outDir\\": \\"\\"
  },
  \\"files\\": [
    \\"../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/cssmodule.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/image.d.ts\\"
  ],
  \\"exclude\\": [
    \\"../**/*.spec.ts\\",
    \\"../**/*.spec.js\\",
    \\"../**/*.spec.tsx\\",
    \\"../**/*.spec.jsx\\"
  ],
  \\"include\\": [
    \\"../components/**/*.stories.ts\\",
    \\"../components/**/*.stories.js\\",
    \\"../components/**/*.stories.jsx\\",
    \\"../components/**/*.stories.tsx\\",
    \\"../components/**/*.stories.mdx\\",
    \\"*.ts\\",
    \\"*.js\\"
  ]
}
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for Storybook configurations with Vite should create correct main.ts and tsconfig.json for React apps 1`] = `
"import type { StorybookConfig } from '@storybook/core-common';

import { mergeConfig } from 'vite';
import viteTsConfigPaths from 'vite-tsconfig-paths';

const config: StorybookConfig = {
  core: { builder: '@storybook/builder-vite' },
  stories: [
    '../src/app/**/*.stories.mdx',
    '../src/app/**/*.stories.@(js|jsx|ts|tsx)',
  ],
  addons: ['@storybook/addon-essentials'],
  async viteFinal(config: any) {
    return mergeConfig(config, {
      plugins: [
        viteTsConfigPaths({
          root: '../../../',
        }),
      ],
    });
  },
} as StorybookConfig;

module.exports = config;

// To customize your Vite configuration you can use the viteFinal field.
// Check https://storybook.js.org/docs/react/builders/vite#configuration
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for Storybook configurations with Vite should create correct main.ts and tsconfig.json for React apps 2`] = `
"{
  \\"extends\\": \\"../tsconfig.json\\",
  \\"compilerOptions\\": {
    \\"emitDecoratorMetadata\\": true,
    \\"outDir\\": \\"\\"
  },
  \\"files\\": [
    \\"../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/cssmodule.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/image.d.ts\\"
  ],
  \\"exclude\\": [
    \\"../**/*.spec.ts\\",
    \\"../**/*.spec.js\\",
    \\"../**/*.spec.tsx\\",
    \\"../**/*.spec.jsx\\"
  ],
  \\"include\\": [
    \\"../src/**/*.stories.ts\\",
    \\"../src/**/*.stories.js\\",
    \\"../src/**/*.stories.jsx\\",
    \\"../src/**/*.stories.tsx\\",
    \\"../src/**/*.stories.mdx\\",
    \\"*.ts\\",
    \\"*.js\\"
  ]
}
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for TypeScript Storybook configurations should create correct main.ts and tsconfig.json for NextJS buildable libs 1`] = `
"import type { StorybookConfig } from '@storybook/core-common';

const config: StorybookConfig = {
  core: { builder: 'webpack5' },
  stories: [
    '../src/lib/**/*.stories.mdx',
    '../src/lib/**/*.stories.@(js|jsx|ts|tsx)',
  ],
  addons: ['@storybook/addon-essentials', '@nrwl/react/plugins/storybook'],
};

module.exports = config;

// To customize your webpack configuration you can use the webpackFinal field.
// Check https://storybook.js.org/docs/react/builders/webpack#extending-storybooks-webpack-config
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for TypeScript Storybook configurations should create correct main.ts and tsconfig.json for NextJS buildable libs 2`] = `
"{
  \\"extends\\": \\"../tsconfig.json\\",
  \\"compilerOptions\\": {
    \\"emitDecoratorMetadata\\": true,
    \\"outDir\\": \\"\\"
  },
  \\"files\\": [
    \\"../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/cssmodule.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/image.d.ts\\"
  ],
  \\"exclude\\": [
    \\"../**/*.spec.ts\\",
    \\"../**/*.spec.js\\",
    \\"../**/*.spec.tsx\\",
    \\"../**/*.spec.jsx\\"
  ],
  \\"include\\": [
    \\"../src/**/*.stories.ts\\",
    \\"../src/**/*.stories.js\\",
    \\"../src/**/*.stories.jsx\\",
    \\"../src/**/*.stories.tsx\\",
    \\"../src/**/*.stories.mdx\\",
    \\"*.ts\\",
    \\"*.js\\"
  ]
}
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for TypeScript Storybook configurations should create correct main.ts and tsconfig.json for NextJS libs 1`] = `
"import type { StorybookConfig } from '@storybook/core-common';

const config: StorybookConfig = {
  core: { builder: 'webpack5' },
  stories: [
    '../src/lib/**/*.stories.mdx',
    '../src/lib/**/*.stories.@(js|jsx|ts|tsx)',
  ],
  addons: ['@storybook/addon-essentials', '@nrwl/react/plugins/storybook'],
};

module.exports = config;

// To customize your webpack configuration you can use the webpackFinal field.
// Check https://storybook.js.org/docs/react/builders/webpack#extending-storybooks-webpack-config
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for TypeScript Storybook configurations should create correct main.ts and tsconfig.json for NextJS libs 2`] = `
"{
  \\"extends\\": \\"../tsconfig.json\\",
  \\"compilerOptions\\": {
    \\"emitDecoratorMetadata\\": true,
    \\"outDir\\": \\"\\"
  },
  \\"files\\": [
    \\"../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/cssmodule.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/image.d.ts\\"
  ],
  \\"exclude\\": [
    \\"../**/*.spec.ts\\",
    \\"../**/*.spec.js\\",
    \\"../**/*.spec.tsx\\",
    \\"../**/*.spec.jsx\\"
  ],
  \\"include\\": [
    \\"../src/**/*.stories.ts\\",
    \\"../src/**/*.stories.js\\",
    \\"../src/**/*.stories.jsx\\",
    \\"../src/**/*.stories.tsx\\",
    \\"../src/**/*.stories.mdx\\",
    \\"*.ts\\",
    \\"*.js\\"
  ]
}
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for TypeScript Storybook configurations should create correct main.ts and tsconfig.json for NextJs apps 1`] = `
"import type { StorybookConfig } from '@storybook/core-common';
import path from 'path';

const config: StorybookConfig = {
  core: { builder: 'webpack5' },
  stories: [
    '../components/**/*.stories.mdx',
    '../components/**/*.stories.@(js|jsx|ts|tsx)',
  ],
  addons: [
    '@storybook/addon-essentials',
    '@nrwl/react/plugins/storybook',

    'storybook-addon-swc',
    {
      name: 'storybook-addon-next',
      options: {
        nextConfigPath: path.resolve(__dirname, '../next.config.js'),
      },
    },
  ],
};

module.exports = config;

// To customize your webpack configuration you can use the webpackFinal field.
// Check https://storybook.js.org/docs/react/builders/webpack#extending-storybooks-webpack-config
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for TypeScript Storybook configurations should create correct main.ts and tsconfig.json for NextJs apps 2`] = `
"{
  \\"extends\\": \\"../tsconfig.json\\",
  \\"compilerOptions\\": {
    \\"emitDecoratorMetadata\\": true,
    \\"outDir\\": \\"\\"
  },
  \\"files\\": [
    \\"../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/cssmodule.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/image.d.ts\\"
  ],
  \\"exclude\\": [
    \\"../**/*.spec.ts\\",
    \\"../**/*.spec.js\\",
    \\"../**/*.spec.tsx\\",
    \\"../**/*.spec.jsx\\"
  ],
  \\"include\\": [
    \\"../components/**/*.stories.ts\\",
    \\"../components/**/*.stories.js\\",
    \\"../components/**/*.stories.jsx\\",
    \\"../components/**/*.stories.tsx\\",
    \\"../components/**/*.stories.mdx\\",
    \\"*.ts\\",
    \\"*.js\\"
  ]
}
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for TypeScript Storybook configurations should create correct main.ts and tsconfig.json for React apps 1`] = `
"import type { StorybookConfig } from '@storybook/core-common';

const config: StorybookConfig = {
  core: { builder: 'webpack5' },
  stories: [
    '../src/app/**/*.stories.mdx',
    '../src/app/**/*.stories.@(js|jsx|ts|tsx)',
  ],
  addons: ['@storybook/addon-essentials', '@nrwl/react/plugins/storybook'],
};

module.exports = config;

// To customize your webpack configuration you can use the webpackFinal field.
// Check https://storybook.js.org/docs/react/builders/webpack#extending-storybooks-webpack-config
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for TypeScript Storybook configurations should create correct main.ts and tsconfig.json for React apps 2`] = `
"{
  \\"extends\\": \\"../tsconfig.json\\",
  \\"compilerOptions\\": {
    \\"emitDecoratorMetadata\\": true,
    \\"outDir\\": \\"\\"
  },
  \\"files\\": [
    \\"../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/cssmodule.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/image.d.ts\\"
  ],
  \\"exclude\\": [
    \\"../**/*.spec.ts\\",
    \\"../**/*.spec.js\\",
    \\"../**/*.spec.tsx\\",
    \\"../**/*.spec.jsx\\"
  ],
  \\"include\\": [
    \\"../src/**/*.stories.ts\\",
    \\"../src/**/*.stories.js\\",
    \\"../src/**/*.stories.jsx\\",
    \\"../src/**/*.stories.tsx\\",
    \\"../src/**/*.stories.mdx\\",
    \\"*.ts\\",
    \\"*.js\\"
  ]
}
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for TypeScript Storybook configurations should create correct main.ts and tsconfig.json for React apps using the swc compiler 1`] = `
"import type { StorybookConfig } from '@storybook/core-common';

const config: StorybookConfig = {
  core: { builder: 'webpack5' },
  stories: [
    '../src/app/**/*.stories.mdx',
    '../src/app/**/*.stories.@(js|jsx|ts|tsx)',
  ],
  addons: [
    '@storybook/addon-essentials',
    '@nrwl/react/plugins/storybook',
    'storybook-addon-swc',
  ],
};

module.exports = config;

// To customize your webpack configuration you can use the webpackFinal field.
// Check https://storybook.js.org/docs/react/builders/webpack#extending-storybooks-webpack-config
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for TypeScript Storybook configurations should create correct main.ts and tsconfig.json for React apps using the swc compiler 2`] = `
"{
  \\"extends\\": \\"../tsconfig.json\\",
  \\"compilerOptions\\": {
    \\"emitDecoratorMetadata\\": true,
    \\"outDir\\": \\"\\"
  },
  \\"files\\": [
    \\"../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/cssmodule.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/image.d.ts\\"
  ],
  \\"exclude\\": [
    \\"../**/*.spec.ts\\",
    \\"../**/*.spec.js\\",
    \\"../**/*.spec.tsx\\",
    \\"../**/*.spec.jsx\\"
  ],
  \\"include\\": [
    \\"../src/**/*.stories.ts\\",
    \\"../src/**/*.stories.js\\",
    \\"../src/**/*.stories.jsx\\",
    \\"../src/**/*.stories.tsx\\",
    \\"../src/**/*.stories.mdx\\",
    \\"*.ts\\",
    \\"*.js\\"
  ]
}
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for TypeScript Storybook configurations should create correct main.ts and tsconfig.json for React buildable libs 1`] = `
"import type { StorybookConfig } from '@storybook/core-common';

const config: StorybookConfig = {
  core: { builder: 'webpack5' },
  stories: [
    '../src/lib/**/*.stories.mdx',
    '../src/lib/**/*.stories.@(js|jsx|ts|tsx)',
  ],
  addons: ['@storybook/addon-essentials', '@nrwl/react/plugins/storybook'],
};

module.exports = config;

// To customize your webpack configuration you can use the webpackFinal field.
// Check https://storybook.js.org/docs/react/builders/webpack#extending-storybooks-webpack-config
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for TypeScript Storybook configurations should create correct main.ts and tsconfig.json for React buildable libs 2`] = `
"{
  \\"extends\\": \\"../tsconfig.json\\",
  \\"compilerOptions\\": {
    \\"emitDecoratorMetadata\\": true,
    \\"outDir\\": \\"\\"
  },
  \\"files\\": [
    \\"../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/cssmodule.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/image.d.ts\\"
  ],
  \\"exclude\\": [
    \\"../**/*.spec.ts\\",
    \\"../**/*.spec.js\\",
    \\"../**/*.spec.tsx\\",
    \\"../**/*.spec.jsx\\"
  ],
  \\"include\\": [
    \\"../src/**/*.stories.ts\\",
    \\"../src/**/*.stories.js\\",
    \\"../src/**/*.stories.jsx\\",
    \\"../src/**/*.stories.tsx\\",
    \\"../src/**/*.stories.mdx\\",
    \\"*.ts\\",
    \\"*.js\\"
  ]
}
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for js Storybook configurations should create correct main.js and tsconfig.json for NextJS buildable libs 1`] = `
"module.exports = {
  core: { builder: 'webpack5' },
  stories: [
    '../src/lib/**/*.stories.mdx',
    '../src/lib/**/*.stories.@(js|jsx|ts|tsx)',
  ],
  addons: ['@storybook/addon-essentials', '@nrwl/react/plugins/storybook'],
};

// To customize your webpack configuration you can use the webpackFinal field.
// Check https://storybook.js.org/docs/react/builders/webpack#extending-storybooks-webpack-config
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for js Storybook configurations should create correct main.js and tsconfig.json for NextJS buildable libs 2`] = `
"{
  \\"extends\\": \\"../tsconfig.json\\",
  \\"compilerOptions\\": {
    \\"emitDecoratorMetadata\\": true,
    \\"outDir\\": \\"\\"
  },
  \\"files\\": [
    \\"../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/cssmodule.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/image.d.ts\\"
  ],
  \\"exclude\\": [
    \\"../**/*.spec.ts\\",
    \\"../**/*.spec.js\\",
    \\"../**/*.spec.tsx\\",
    \\"../**/*.spec.jsx\\"
  ],
  \\"include\\": [
    \\"../src/**/*.stories.ts\\",
    \\"../src/**/*.stories.js\\",
    \\"../src/**/*.stories.jsx\\",
    \\"../src/**/*.stories.tsx\\",
    \\"../src/**/*.stories.mdx\\",
    \\"*.js\\"
  ]
}
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for js Storybook configurations should create correct main.js and tsconfig.json for NextJS libs 1`] = `
"module.exports = {
  core: { builder: 'webpack5' },
  stories: [
    '../src/lib/**/*.stories.mdx',
    '../src/lib/**/*.stories.@(js|jsx|ts|tsx)',
  ],
  addons: ['@storybook/addon-essentials', '@nrwl/react/plugins/storybook'],
};

// To customize your webpack configuration you can use the webpackFinal field.
// Check https://storybook.js.org/docs/react/builders/webpack#extending-storybooks-webpack-config
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for js Storybook configurations should create correct main.js and tsconfig.json for NextJS libs 2`] = `
"{
  \\"extends\\": \\"../tsconfig.json\\",
  \\"compilerOptions\\": {
    \\"emitDecoratorMetadata\\": true,
    \\"outDir\\": \\"\\"
  },
  \\"files\\": [
    \\"../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/cssmodule.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/image.d.ts\\"
  ],
  \\"exclude\\": [
    \\"../**/*.spec.ts\\",
    \\"../**/*.spec.js\\",
    \\"../**/*.spec.tsx\\",
    \\"../**/*.spec.jsx\\"
  ],
  \\"include\\": [
    \\"../src/**/*.stories.ts\\",
    \\"../src/**/*.stories.js\\",
    \\"../src/**/*.stories.jsx\\",
    \\"../src/**/*.stories.tsx\\",
    \\"../src/**/*.stories.mdx\\",
    \\"*.js\\"
  ]
}
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for js Storybook configurations should create correct main.js and tsconfig.json for NextJs apps 1`] = `
"const path = require('path');

module.exports = {
  core: { builder: 'webpack5' },
  stories: [
    '../components/**/*.stories.mdx',
    '../components/**/*.stories.@(js|jsx|ts|tsx)',
  ],
  addons: [
    '@storybook/addon-essentials',
    '@nrwl/react/plugins/storybook',

    'storybook-addon-swc',
    {
      name: 'storybook-addon-next',
      options: {
        nextConfigPath: path.resolve(__dirname, '../next.config.js'),
      },
    },
  ],
};

// To customize your webpack configuration you can use the webpackFinal field.
// Check https://storybook.js.org/docs/react/builders/webpack#extending-storybooks-webpack-config
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for js Storybook configurations should create correct main.js and tsconfig.json for NextJs apps 2`] = `
"{
  \\"extends\\": \\"../tsconfig.json\\",
  \\"compilerOptions\\": {
    \\"emitDecoratorMetadata\\": true,
    \\"outDir\\": \\"\\"
  },
  \\"files\\": [
    \\"../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/cssmodule.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/image.d.ts\\"
  ],
  \\"exclude\\": [
    \\"../**/*.spec.ts\\",
    \\"../**/*.spec.js\\",
    \\"../**/*.spec.tsx\\",
    \\"../**/*.spec.jsx\\"
  ],
  \\"include\\": [
    \\"../components/**/*.stories.ts\\",
    \\"../components/**/*.stories.js\\",
    \\"../components/**/*.stories.jsx\\",
    \\"../components/**/*.stories.tsx\\",
    \\"../components/**/*.stories.mdx\\",
    \\"*.js\\"
  ]
}
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for js Storybook configurations should create correct main.js and tsconfig.json for React apps 1`] = `
"module.exports = {
  core: { builder: 'webpack5' },
  stories: [
    '../src/app/**/*.stories.mdx',
    '../src/app/**/*.stories.@(js|jsx|ts|tsx)',
  ],
  addons: ['@storybook/addon-essentials', '@nrwl/react/plugins/storybook'],
};

// To customize your webpack configuration you can use the webpackFinal field.
// Check https://storybook.js.org/docs/react/builders/webpack#extending-storybooks-webpack-config
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for js Storybook configurations should create correct main.js and tsconfig.json for React apps 2`] = `
"{
  \\"extends\\": \\"../tsconfig.json\\",
  \\"compilerOptions\\": {
    \\"emitDecoratorMetadata\\": true,
    \\"outDir\\": \\"\\"
  },
  \\"files\\": [
    \\"../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/cssmodule.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/image.d.ts\\"
  ],
  \\"exclude\\": [
    \\"../**/*.spec.ts\\",
    \\"../**/*.spec.js\\",
    \\"../**/*.spec.tsx\\",
    \\"../**/*.spec.jsx\\"
  ],
  \\"include\\": [
    \\"../src/**/*.stories.ts\\",
    \\"../src/**/*.stories.js\\",
    \\"../src/**/*.stories.jsx\\",
    \\"../src/**/*.stories.tsx\\",
    \\"../src/**/*.stories.mdx\\",
    \\"*.js\\"
  ]
}
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for js Storybook configurations should create correct main.js and tsconfig.json for React apps using the swc compiler 1`] = `
"module.exports = {
  core: { builder: 'webpack5' },
  stories: [
    '../src/app/**/*.stories.mdx',
    '../src/app/**/*.stories.@(js|jsx|ts|tsx)',
  ],
  addons: [
    '@storybook/addon-essentials',
    '@nrwl/react/plugins/storybook',
    'storybook-addon-swc',
  ],
};

// To customize your webpack configuration you can use the webpackFinal field.
// Check https://storybook.js.org/docs/react/builders/webpack#extending-storybooks-webpack-config
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for js Storybook configurations should create correct main.js and tsconfig.json for React apps using the swc compiler 2`] = `
"{
  \\"extends\\": \\"../tsconfig.json\\",
  \\"compilerOptions\\": {
    \\"emitDecoratorMetadata\\": true,
    \\"outDir\\": \\"\\"
  },
  \\"files\\": [
    \\"../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/cssmodule.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/image.d.ts\\"
  ],
  \\"exclude\\": [
    \\"../**/*.spec.ts\\",
    \\"../**/*.spec.js\\",
    \\"../**/*.spec.tsx\\",
    \\"../**/*.spec.jsx\\"
  ],
  \\"include\\": [
    \\"../src/**/*.stories.ts\\",
    \\"../src/**/*.stories.js\\",
    \\"../src/**/*.stories.jsx\\",
    \\"../src/**/*.stories.tsx\\",
    \\"../src/**/*.stories.mdx\\",
    \\"*.js\\"
  ]
}
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for js Storybook configurations should create correct main.js and tsconfig.json for React buildable libs 1`] = `
"module.exports = {
  core: { builder: 'webpack5' },
  stories: [
    '../src/lib/**/*.stories.mdx',
    '../src/lib/**/*.stories.@(js|jsx|ts|tsx)',
  ],
  addons: ['@storybook/addon-essentials', '@nrwl/react/plugins/storybook'],
};

// To customize your webpack configuration you can use the webpackFinal field.
// Check https://storybook.js.org/docs/react/builders/webpack#extending-storybooks-webpack-config
// and https://nx.dev/packages/storybook/documents/custom-builder-configs
"
`;

exports[`@nrwl/storybook:configuration for other types of projects - Next.js and the swc compiler for js Storybook configurations should create correct main.js and tsconfig.json for React buildable libs 2`] = `
"{
  \\"extends\\": \\"../tsconfig.json\\",
  \\"compilerOptions\\": {
    \\"emitDecoratorMetadata\\": true,
    \\"outDir\\": \\"\\"
  },
  \\"files\\": [
    \\"../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/cssmodule.d.ts\\",
    \\"../../../node_modules/@nrwl/react/typings/image.d.ts\\"
  ],
  \\"exclude\\": [
    \\"../**/*.spec.ts\\",
    \\"../**/*.spec.js\\",
    \\"../**/*.spec.tsx\\",
    \\"../**/*.spec.jsx\\"
  ],
  \\"include\\": [
    \\"../src/**/*.stories.ts\\",
    \\"../src/**/*.stories.js\\",
    \\"../src/**/*.stories.jsx\\",
    \\"../src/**/*.stories.tsx\\",
    \\"../src/**/*.stories.mdx\\",
    \\"*.js\\"
  ]
}
"
`;
